# zhuque

./: Cargo.toml  LICENSE  README  README.md
.github/workflows/: publish.yml  rust.yml
demo/: cert.pem  config.toml  key.pem
demo/capsule/: index.gmi
demo/capsule/gemlog/: cn.gmi  en.gmi
src/: cli.rs  gmi.rs  main.rs
