[package]
name = "zhuque"
version = "0.1.0"
authors = [
    "Lu Kai <mailto:lukai@mail.ustc.edu.cn>",
]
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
#axum = "0.8"
#axum-extra = "0.12"
#tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
