[package]
name = "zhuque"
version = "0.1.0"
authors = ["Lu Kai <mailto:lukai@mail.ustc.edu.cn>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
percent-encoding = "2.3"
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tree_magic_mini = "3.2"
tokio = { version = "1.49", features = ["full"] }
tokio-rustls = "0.26"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
url = "2.5"
